# whatever flags you want to pass to the C compiler & linker
CFLAGS = -Wall -c -std=c++11
LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = twonky
hello_SOURCES = main.cc tgrid.cc help.cc config.h tgrid.h twonky.h
SUBDIRS = src
ACLOCAL_AMFLAGS = -I m4
